--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -1,1 +1,24 @@
-<h1> Let's log in </h1>
+{% extends 'base.html' %}
+
+{% block content %}
+<section id="loginpage">
+    <form action="" novalidate> 
+        {{ form.hidden_tag() }}
+        <div class="row mb-4">
+          <label for="username" class="col-sm-3 col-form-label">Username</label>
+          <div class="col-sm-8">
+            <input type="text" class="form-control" id="inputText">
+          </div>
+        </div>
+        <div class="row mb-4">
+          <label for="password" class="col-sm-3 col-form-label">Password</label>
+          <div class="col-sm-8">
+            <input type="password" class="form-control" id="inputPassword">
+          </div>
+        </div>
+        <button type="submit" class="btn btn-outline-dark">Sign in</button><br><br>
+        <a href="{{ url_for('auth.register') }}" class="btn btn-outline-dark" tabindex="-1" role="button" >Click to register</a>
+      </form>
+</section>
+{% endblock %}
+
