--- a/app/templates/auth/register.html
+++ b/app/templates/auth/register.html
@@ -1,1 +1,34 @@
-<h1> Let's register man! </h1>
+{% extends 'base.html' %}
+
+{% block content %}
+<section id="loginpage">
+    <form action="" novalidate> 
+        {{ form.hidden_tag() }}
+        <div class="row mb-4">
+          <label for="username" class="col-sm-3 col-form-label">Username</label>
+          <div class="col-sm-8">
+            <input type="text" class="form-control" id="inputText">
+          </div>
+        </div>
+        <div class="row mb-4">
+            <label for="username" class="col-sm-3 col-form-label">Email</label>
+            <div class="col-sm-8">
+              <input type="email" class="form-control" id="inputText">
+            </div>
+        </div>
+        <div class="row mb-4">
+          <label for="password" class="col-sm-3 col-form-label">Password</label>
+          <div class="col-sm-8">
+            <input type="password" class="form-control" id="inputPassword">
+          </div>
+        </div>
+        <div class="row mb-4">
+            <label for="password" class="col-sm-3 col-form-label">Repeat Password</label>
+            <div class="col-sm-8">
+              <input type="password" class="form-control" id="inputPassword">
+            </div>
+        </div>
+        <button type="submit" class="btn btn-outline-dark">Register</button><br><br>
+      </form>
+</section>
+{% endblock %}
