--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -2,21 +2,40 @@
 
 {% block content %}
 <section id="loginpage">
-    <form action="" novalidate> 
+    <form action=""> 
         {{ form.hidden_tag() }}
+        <div class="leg"><legend class="border-bottom mb-4"> Log In </legend></div>
         <div class="row mb-4">
-          <label for="username" class="col-sm-3 col-form-label">Username</label>
-          <div class="col-sm-8">
-            <input type="text" class="form-control" id="inputText">
-          </div>
+          {{ form.username.label(class="col-sm-3 col-form-label") }}
+          {% if form.username.errors %}
+            {{ form.username(class="form-control is-invalid") }}
+            <div class="invalid-feedback">
+                {% for error in form.username.errors %}
+                  <span style="color: red;">[{{ error }}]</span>
+                {% endfor %}
+            </div>
+          {% else %}
+            <div class="col-sm-8">
+              {{ form.username(class="form-control") }}
+            </div>
+          {% endif %}
         </div>
         <div class="row mb-4">
-          <label for="password" class="col-sm-3 col-form-label">Password</label>
+          {{ form.password.label(class="col-sm-3 col-form-label") }}
+          {% if form.password.errors %}
+            {{ form.password(class="form-control is-invalid") }}
+            <div class="invalid-feedback">
+                {% for error in form.password.errors %}
+                  <span style="color: red;">[{{ error }}]</span>
+                {% endfor %}
+            </div>
+          {% else %}
           <div class="col-sm-8">
-            <input type="password" class="form-control" id="inputPassword">
+              {{ form.password(class="form-control") }}
           </div>
+          {% endif %}
         </div>
-        <button type="submit" class="btn btn-outline-dark">Sign in</button><br><br>
+        {{ form.submit(class="btn btn-outline-dark") }}<br/><br/>
         <a href="{{ url_for('auth.register') }}" class="btn btn-outline-dark" tabindex="-1" role="button" >Click to register</a>
       </form>
 </section>
