--- a/app/templates/auth/register.html
+++ b/app/templates/auth/register.html
@@ -2,33 +2,70 @@
 
 {% block content %}
 <section id="loginpage">
-    <form action="" novalidate> 
+    <form action="{{ url_for('auth.register') }}" method="POST" novalidate> 
         {{ form.hidden_tag() }}
+        <div class="leg"><legend class="border-bottom mb-4"> Register </legend></div>
         <div class="row mb-4">
-          <label for="username" class="col-sm-3 col-form-label">Username</label>
-          <div class="col-sm-8">
-            <input type="text" class="form-control" id="inputText">
-          </div>
-        </div>
-        <div class="row mb-4">
-            <label for="username" class="col-sm-3 col-form-label">Email</label>
+          {{ form.username.label(class="col-sm-3 col-form-label") }}
+          {% if form.username.errors %}
+            {{ form.username(class="form-control is-invalid") }}
+              <div class="invalid-feedback">
+                {% for error in form.username.errors %}
+                  <span style="color: red;">[{{ error }}]</span>
+                {% endfor %}
+              </div>
+          {% else %}
             <div class="col-sm-8">
-              <input type="email" class="form-control" id="inputText">
+              {{ form.username(class="form-control") }}
             </div>
+          {% endif %}
         </div>
         <div class="row mb-4">
-          <label for="password" class="col-sm-3 col-form-label">Password</label>
-          <div class="col-sm-8">
-            <input type="password" class="form-control" id="inputPassword">
-          </div>
+          {{ form.email.label(class="col-sm-3 col-form-label") }}
+          {% if form.email.errors %}
+            {{ form.email(class="form-control is-invalid") }}
+              <div class="invalid-feedback">
+                {% for error in form.email.errors %}
+                  <span style="color: red;">[{{ error }}]</span>
+                {% endfor %}
+              </div>
+          {% else %}
+              <div class="col-sm-8">
+                {{ form.email(class="form-control") }}
+              </div>
+          {% endif %}
         </div>
         <div class="row mb-4">
-            <label for="password" class="col-sm-3 col-form-label">Repeat Password</label>
-            <div class="col-sm-8">
-              <input type="password" class="form-control" id="inputPassword">
-            </div>
+            {{ form.password.label(class="col-sm-3 col-form-label") }}
+            {% if form.password.errors %}
+              {{ form.password(class="form-control is-invalid") }}
+                <div class="invalid-feedback">
+                  {% for error in form.password.errors %}
+                    <span style="color: red;">[{{ error }}]</span>
+                  {% endfor %}
+                </div>
+            {% else %}
+                <div class="col-sm-8">
+                  {{ form.password(class="form-control") }}
+                </div>
+            {% endif %}
         </div>
-        <button type="submit" class="btn btn-outline-dark">Register</button><br><br>
+        <div class="row mb-4">
+            {{ form.password2.label(class="col-sm-3 col-form-label") }}
+            {% if form.password2.errors %}
+              {{ form.password2(class="form-control is-invalid") }}
+                <div class="invalid-feedback">
+                  {% for error in form.password2.errors %}
+                    <span style="color: red;">[{{ error }}]</span>
+                  {% endfor %}
+                </div>
+            {% else %}
+                <div class="col-sm-8">
+                  {{ form.password2(class="form-control") }}
+                </div>
+            {% endif %}
+        </div>
+        {{ form.submit(class="btn btn-outline-dark") }}
       </form>
 </section>
 {% endblock %}
