--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <section id="loginpage">
-    <form action=""> 
+    <form action="{{ url_for('auth.login') }}" method="POST" novalidate> 
         {{ form.hidden_tag() }}
         <div class="leg"><legend class="border-bottom mb-4"> Log In </legend></div>
         <div class="row mb-4">
@@ -11,7 +11,7 @@
             {{ form.username(class="form-control is-invalid") }}
             <div class="invalid-feedback">
                 {% for error in form.username.errors %}
-                  <span style="color: red;">[{{ error }}]</span>
+                  <span style="color: red;">{{ error }}</span>
                 {% endfor %}
             </div>
           {% else %}
@@ -26,7 +26,7 @@
             {{ form.password(class="form-control is-invalid") }}
             <div class="invalid-feedback">
                 {% for error in form.password.errors %}
-                  <span style="color: red;">[{{ error }}]</span>
+                  <span style="color: red;">{{ error }}</span>
                 {% endfor %}
             </div>
           {% else %}
