--- a/app/templates/auth/register.html
+++ b/app/templates/auth/register.html
@@ -11,7 +11,7 @@
             {{ form.username(class="form-control is-invalid") }}
               <div class="invalid-feedback">
                 {% for error in form.username.errors %}
-                  <span style="color: red;">[{{ error }}]</span>
+                  <span style="color: red;">{{ error }}</span>
                 {% endfor %}
               </div>
           {% else %}
@@ -26,7 +26,7 @@
             {{ form.email(class="form-control is-invalid") }}
               <div class="invalid-feedback">
                 {% for error in form.email.errors %}
-                  <span style="color: red;">[{{ error }}]</span>
+                  <span style="color: red;">{{ error }}</span>
                 {% endfor %}
               </div>
           {% else %}
@@ -41,7 +41,7 @@
               {{ form.password(class="form-control is-invalid") }}
                 <div class="invalid-feedback">
                   {% for error in form.password.errors %}
-                    <span style="color: red;">[{{ error }}]</span>
+                    <span style="color: red;">{{ error }}</span>
                   {% endfor %}
                 </div>
             {% else %}
@@ -56,7 +56,7 @@
               {{ form.password2(class="form-control is-invalid") }}
                 <div class="invalid-feedback">
                   {% for error in form.password2.errors %}
-                    <span style="color: red;">[{{ error }}]</span>
+                    <span style="color: red;">{{ error }}</span>
                   {% endfor %}
                 </div>
             {% else %}
