--- a/app/templates/main/index.html
+++ b/app/templates/main/index.html
@@ -1,60 +1,21 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+{% extends 'base.html' %}
 
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="/app/static/styles.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet">
-    <title>{{ title }}</title>
-  </head>
-  <body>
-    <section id="mynav">
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <div class="container-fluid">
-              <a class="navbar-brand" href="#">LIBrary</a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ml-auto">
-                  <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">My books</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link active" href="{{ url_for('auth.logout') }}">Log out</a>
-                  </li>
-                </ul>
-              </div>
-            </div>
-        </nav>
-    </section>
-    <section id="mysearch">
-      <div class="container">
-        <form class="d-flex">
-          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-success" type="submit">Search</button>
-        </form>
+{% block content %}
+<section id="mysearch">
+  <div class="container">
+    <form class="d-flex">
+      <input class="form-control me-2" type="search" placeholder="Search a book by title or author..." aria-label="Search">
+      <button class="btn btn-outline-success" type="submit">Search</button>
+    </form>
+  </div>
+</section>
+<section id="mybooks">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-3 col-md-4 col-sm-12">
+        <div id="col1"><p>col1</p></div>
       </div>
-    </section>
-    <section id="mybooks">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-3 col-md-4 col-sm-12">
-            <div id="col1"><p>col1</p></div>
-          </div>
-          
-        </div>
-      </div>
-    </section>
-    
-
-    <!-- Option 1: Bootstrap Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-  </body>
-</html>
+    </div>
+  </div>
+</section>
+{% endblock %}
