align navbar items to the right

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -23,9 +23,9 @@
                 <span class="navbar-toggler-icon"></span>
               </button>
               <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ml-auto">
+                <ul class="navbar-nav ms-auto">
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">My books</a>
+                    <a class="nav-link active" aria-current="page" href="">My books</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link active" href="{{ url_for('auth.logout') }}">Log out</a>
