--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -26,7 +26,7 @@
                 <ul class="navbar-nav ms-auto">
                   {% if current_user.is_admin %}
                     <li class="nav-item">
-                      <a class="nav-link active" href="{{ url_for('admin.add-book') }}">Add a book</a>
+                      <a class="nav-link active" href="{{ url_for('admin.add_book') }}">Add a book</a>
                     </li>
                     <li class="nav-item">
                       <a class="nav-link active" aria-current="page" href="{{ url_for('admin.users') }}">Users</a>
