complete error templates

--- a/app/templates/errors/404.html
+++ b/app/templates/errors/404.html
@@ -1,1 +1,9 @@
-<h1> 404 page </h1>
+{% extends 'base.html' %}
+
+{% block content %}
+<section id="error404">
+    <div class = "container text-center">
+        <p> Sorry, Page not found</p>
+    </div>
+</section>
+{% endblock %}
