--- a/app/templates/errors/500.html
+++ b/app/templates/errors/500.html
@@ -1,1 +1,9 @@
-<h1> 500 page </h1>
+{% extends 'base.html' %}
+
+{% block content %}
+<section id="error500">
+    <div class = "container text-center">
+        <p> Sorry, unexpected error! We're working on it</p>
+    </div>
+</section>
+{% endblock %}
