--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -17,7 +17,11 @@
     <section id="mynav">
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
-              <a class="navbar-brand" href="#">LIBrary</a>
+              {% if current_user.is_admin %}
+              <a class="navbar-brand" href="{{ url_for('admin.admin') }}">LIBrary</a>
+              {% else %}
+              <a class="navbar-brand" href="{{ url_for('main.index') }}">LIBrary</a>
+              {% endif %}
               {% if current_user.is_authenticated %}
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
