remove links on form action

--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <section id="loginpage">
-    <form action="{{ url_for('auth.login') }}" method="POST" novalidate> 
+    <form action="" method="POST" novalidate> 
         {{ form.hidden_tag() }}
         <div class="leg"><legend class="border-bottom mb-4"> Log In </legend></div>
         <div class="row mb-4">
