complete ckeditor integration

--- a/app/templates/books/create_book.html
+++ b/app/templates/books/create_book.html
@@ -45,8 +45,8 @@
                   {% endfor %}
                 </div>
             {% else %}
-                <div class="col-sm-8">
-                  {{ form.synopsis(class="form-control") }}
+                <div class="col-sm-8" id="editor">
+                    {{ form.synopsis(class="form-control") }}
                 </div>
             {% endif %}
         </div>
