--- a/app/templates/main/index.html
+++ b/app/templates/main/index.html
@@ -5,16 +5,16 @@
   <div class="container">
     <form class="d-flex">
       <input class="form-control me-2" type="search" placeholder="Search a book by title or author..." aria-label="Search">
-      <button class="btn btn-outline-success" type="submit">Search</button>
+      <button class="btn btn-outline-dark" type="submit">Search</button>
     </form>
   </div>
 </section>
 <section id="mybooks">
   <div class="container">
-    <div class="row">
+    <div class="row" id="bookpost">
       {% for book in books %}
       <div class="col-lg-3 col-md-4 col-sm-12">
-        <img src="{{ url_for('static', filename = 'images/books/' + book.img_url ) }}" height = 200 object-fit="centre">
+        <a href="{{ url_for('books.show_book', id= book.id ) }}"><img class="img-fluid rounded float-left" src="{{ url_for('static', filename = 'images/books/' + book.img_url ) }}"></a>
       </div>
       {% endfor %}
     </div>
