--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -10,12 +10,12 @@
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles.css') }}">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600&display=swap" rel="stylesheet">
     <title>{{ title }}</title>
   </head>
   <body>
     <section id="mynav">
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <nav class="navbar navbar-expand-lg navbar-light bg-whit">
             <div class="container-fluid">
               {% if current_user.is_admin %}
               <a class="navbar-brand" href="{{ url_for('admin.admin') }}">LIBrary</a>
