--- a/app/templates/books/show_book.html
+++ b/app/templates/books/show_book.html
@@ -2,6 +2,32 @@
 
 {% block content %}
 <section id="bookshow">
-    <p> Show my book !</p>
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-4">
+                <div class="container">
+                    <div id="bookpic">
+                        <img class="img-fluid rounded float-left" src="{{ url_for('static', filename = 'images/books/' + book.img_url ) }}"></a>
+                    </div>
+                    <div class="container">
+                        <div class="d-flex container" id="useraction">
+                            <a href="{{ url_for('books.borrow_book', id=book.id) }}" class="btn btn-outline-dark" tabindex="-1" role="button" >Borrow book</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-8">
+               <div class="container-fluid" id="booktitle">
+                   <p><strong>{{ book.title }}</strong></p>
+                </div>
+                <div class="container-fluid" id="bookauthor">
+                    <small>{{ book.author }}</small>
+                </div>
+                <div class="container-fluid" id="booksynopsis">
+                   <p>{{ book.synopsis }}</p>
+               </div>
+            </div>
+        </div>
+    </div>
 </section>
 {% endblock %}
