--- a/app/static/styles.css
+++ b/app/static/styles.css
@@ -5,7 +5,7 @@ body{
 }
 #mynav{
     font-weight: 600;
-    font-size: larger;
+    font-size: large;
 }
 
 /** index page selectors **/
@@ -56,7 +56,7 @@ body{
 }
 #booktitle{
     font-weight: 500;
-    font-size: x-large;
+    font-size: larger;
 }
 #bookauthor{
     margin-bottom: 15px;
@@ -69,4 +69,7 @@ body{
     display: flex;
     justify-content: center;
 
+}
+#updatebutton{
+    margin-right: 5px;
 }
