--- a/app/templates/books/show_book.html
+++ b/app/templates/books/show_book.html
@@ -4,14 +4,14 @@
 <section id="bookshow">
     <div class="container">
         <div class="row">
-            <div class="col-lg-4">
+            <div class="col-lg-3">
                 <div class="container">
                     <div id="bookpic">
-                        <img class="img-fluid rounded float-left" src="{{ url_for('static', filename = 'images/books/' + book.img_url ) }}"></a>
+                        <img class="img-fluid rounded float-left" src="{{ url_for('static', filename = 'images/books/' + book.img_url ) }}" alt={{book.title}}></a>
                     </div>                    
                 </div>
             </div>
-            <div class="col-lg-8">
+            <div class="col-lg-9">
                <div class="container-fluid" id="booktitle">
                    <p><strong>{{ book.title }}</strong></p>
                 </div>
@@ -19,7 +19,7 @@
                     <small>{{ book.author }}</small>
                 </div>
                 <div class="container-fluid" id="booksynopsis">
-                   <p>{{ book.synopsis }}</p>
+                   <p>{{ book.synopsis | safe}}</p>
                </div>
                <div class="container">
                 <div class="container" id="useraction">
