--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -33,14 +33,15 @@
                       <a class="nav-link active" href="{{ url_for('admin.add_book') }}">Add a book</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link active" aria-current="page" href="{{ url_for('admin.users') }}">Users</a>
-                    </li>
-                    <li class="nav-item">
                       <a class="nav-link active" href="{{ url_for('auth.logout') }}">Log out</a>
                     </li>
                   {% else %}
                     <li class="nav-item">
-                      <a class="nav-link active" aria-current="page" href="">My books</a>
+                      {% if current_user.borrowed_books | length > 0 %}
+                      <a class="nav-link active" aria-current="page" href="{{ url_for('books.my_books') }}">My books({{ current_user.borrowed_books | length }})</a>
+                      {% else %}
+                      <a class="nav-link active" aria-current="page" href="{{ url_for('books.my_books') }}">My books</a>
+                      {% endif %}
                     </li>
                     <li class="nav-item">
                       <a class="nav-link active" href="{{ url_for('auth.logout') }}">Log out</a>
