--- a/app/templates/main/index.html
+++ b/app/templates/main/index.html
@@ -12,9 +12,10 @@
 <section id="mybooks">
   <div class="container">
     <div class="row" id="bookpost">
+      {% block myBooks %}{% endblock %}
       {% for book in books %}
       <div class="col-lg-3 col-md-4 col-sm-12">
-        <a href="{{ url_for('books.show_book', id= book.id ) }}"><img class="img-fluid rounded float-left" src="{{ url_for('static', filename = 'images/books/' + book.img_url ) }}"></a>
+        <a href="{{ url_for('books.show_book', id= book.id ) }}"><img class="img-fluid rounded float-left" src="{{ url_for('static', filename = 'images/books/' + book.img_url ) }}" alt="{{ book.title }}"></a>
       </div>
       {% endfor %}
     </div>
