--- a/app/templates/books/show_book.html
+++ b/app/templates/books/show_book.html
@@ -7,7 +7,7 @@
             <div class="col-lg-3">
                 <div class="container">
                     <div id="bookpic">
-                        <img class="img-fluid rounded float-left" src="{{ url_for('static', filename = 'images/books/' + book.img_url ) }}" alt={{book.title}}></a>
+                        <img class="img-fluid rounded float-left" src="{{ url_for('static', filename = 'images/books/' + book.img_url ) }}" alt="{{book.title}}"></a>
                     </div>                    
                 </div>
             </div>
