--- a/app/templates/books/show_book.html
+++ b/app/templates/books/show_book.html
@@ -25,7 +25,7 @@
                 <div class="container" id="useraction">
                     {% if current_user.is_admin %}
                       <a href="{{ url_for('admin.update_book', id=book.id) }}" class="btn btn-outline-dark" tabindex="-1" role="button" id="updatebutton">Update details</a><br>
-                      <a href="{{ url_for('admin.delete_book', id=book.id) }}" class="btn btn-outline-danger" tabindex="-1" role="button" >Remove book</a>
+                      <a href="{{ url_for('admin.delete_book', id=book.id) }}" class="btn btn-outline-danger" tabindex="-1" role="button" ><i class="fa fa-trash" aria-hidden="true"></i> Remove book</a>
                     {% elif not current_user.is_admin %}
                       {% if book in current_user.borrowed_books %}
                       <a href="{{ url_for('books.return_book', id=book.id) }}" class="btn btn-outline-dark" tabindex="-1" role="button" >Return book</a>
